# toml2json

./: README.md  pyproject.toml
toml2json/: __main__.py  cli.py
