[tool.poetry]
name = "toml2json"
version = "0.1.0"
description = "Convert TOML files to JSON."
license = "AGPL-3.0-or-later"
authors = ["Alexandre Janvrin <alexandre.janvrin@reseau.eseo.fr>"]
readme = "README.md"
homepage = "https://github.com/LivinParadoX/toml2json/"
repository = "https://pypi.org/project/toml2json/"
classifiers = [
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
]
include = ["toml2json/**/*"]

[tool.poetry.scripts]
toml2json = "toml2json.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
icecream = "^2.1.0"
neovim = "^0.3.1"
jedi = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
